--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
-DATABASE_URL=your_databse_url_here
-PORT=your_port_here
-BCRYPT_SALT_ROUNDS=salt_rounds_here
-JWT_SECRET=jwt_secret_here
+DATABASE_URL=mongodb+srv://XXXXXXX:XXXXXX@cluster0.r22kogv.mongodb.net
+PORT=5000
+BCRYPT_SALT_ROUNDS=10
+JWT_SECRET=your secret
 JWT_ACCESS_TOKEN_EXPIRES_IN=1d
-JWT_REFRESH_TOKEN_SECRET=jwt_refresh_token_secret_here
+JWT_REFRESH_TOKEN_SECRET=your secret 
 JWT_REFRESH_TOKEN_EXPIRES_IN=7d
 NODE_ENV=development
-# 
-# secret: 
+BACKEND_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:5173
